<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".activity.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".activity.RegistrationActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner_gradient"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/update"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_gradient"
            android:padding="10dp"
            android:text="@string/first_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/first_nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner_gradient"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_gradient"
            android:padding="10dp"
            android:text="@string/last_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/last_nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner_gradient"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_gradient"
            android:padding="10dp"
            android:text="@string/number"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/mobile_numberEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner_gradient"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_gradient"
            android:padding="10dp"
            android:text="@string/email_id"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner_gradient"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_gradient"
            android:padding="10dp"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/rounded_corner_gradient">

        <Spinner
            android:id="@+id/location_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_gradient"
        android:padding="10dp"
        android:text="@string/address"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/addressEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corner_gradient"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:imeOptions="actionDone"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_gradient"
        android:padding="10dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/passwordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corner_gradient"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:imeOptions="actionDone"
        android:padding="10dp"
        android:password="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_gradient"
        android:padding="10dp"
        android:text="@string/confirm_password"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/confirm_passwordEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corner_gradient"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:imeOptions="actionDone"
        android:padding="10dp"
        android:password="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />


    <TextView
        android:id="@+id/update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_gradient"
        android:padding="10dp"
        android:text="@string/update"
        android:textColor="@color/black" />


</LinearLayout>


    </ScrollView></LinearLayout>