<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".activity.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="5dp">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.mapwithmarker.MapsMarkerActivity" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="10dp"
                tools:context=".activity.RegistrationActivity">

                <TextView
                    android:id="@+id/show_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/rounded_corner_gradient"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/result"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <LinearLayout
                    android:id="@+id/user_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_corner_gradient"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/user"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_corner_gradient"
                        android:padding="10dp"
                        android:text="@string/first_name"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/first_nameTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_corner_gradient"
                        android:padding="10dp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_corner_gradient"
                        android:padding="10dp"
                        android:text="@string/last_name"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/last_nameTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_corner_gradient"
                        android:padding="10dp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_corner_gradient"
                        android:padding="10dp"
                        android:text="@string/number"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/mobile_numberTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_corner_gradient"
                        android:padding="10dp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_corner_gradient"
                        android:padding="10dp"
                        android:text="@string/email_id"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/emailTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_corner_gradient"
                        android:padding="10dp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_corner_gradient"
                        android:padding="10dp"
                        android:text="@string/location"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/locationTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_corner_gradient"
                        android:padding="10dp"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_corner_gradient"
                        android:padding="10dp"
                        android:text="@string/address"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/addressTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_corner_gradient"
                        android:padding="10dp"
                        android:textColor="@color/black" />

                    <!-- <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/password"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         android:gravity="center_horizontal"/>

                     <TextView
                         android:id="@+id/passwordTv"
                         android:layout_margin="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textColor="@color/black" />-->

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/update"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/rounded_corner_gradient"
                            android:padding="10dp"
                            android:text="@string/update"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/delete"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/rounded_corner_gradient"
                            android:padding="10dp"
                            android:text="@string/delete"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/logout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/rounded_corner_gradient"
                            android:padding="10dp"
                            android:text="@string/logout"
                            android:textColor="@color/black" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>


        </ScrollView>
    </LinearLayout>


</LinearLayout>